# Cernji-Agents

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DATABASE_ARCHITECTURE.md  LANGCHAIN_CONVERSION.md  LOGGING.md  MIGRATION_DEV-53.md  MORNING-STARTUP.md  PUPPETEER_LANGGRAPH_RESEARCH.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  langchain_demo.ipynb  pnpm-lock.yaml  requirements-langchain.txt  resume_agent.py  resume_agent_langchain.py  todo.md
.claude/: settings.local.json  todo.md
ai_docs/: README.md  (+10 more)
apps/japanese-tutor/: .env.example  .gitignore  .mcp.json  CLAUDE.md  DATABASE_USAGE.md  GENERATIVE_UI_TEST.md  LANGGRAPH_SETUP.md  README.md  config.yaml  fastapi_server.py  fix_test_imports.py  langgraph.json  pyproject.toml  requirements.txt  screenshot_watcher.py  start_watcher.bat  update_flashcard.py  update_vocab.py
apps/japanese-tutor/.claude/agents/: japanese-screenshot-analyzer.md
apps/japanese-tutor/.claude/commands/japanese/: analyze-full.md  analyze.md
apps/japanese-tutor/docs/: API_INTEGRATION_GUIDE.md  DATABASE_SCHEMA_REFERENCE.md  DATA_FLOW_QUICK_REFERENCE.md  README_DOCUMENTATION.md  UI_UX_DESIGN_GUIDE.md  USER_WORKFLOWS.md
apps/japanese-tutor/examples/: basic_chat.py  flashcard_review.py  screenshot_analysis.py
apps/japanese-tutor/prompts/: japanese_tutor.md
apps/japanese-tutor/scripts/: run_migration.py  verify_setup.py
apps/japanese-tutor/src/japanese_agent/: __init__.py  graph.py
apps/japanese-tutor/src/japanese_agent/database/: __init__.py  connection.py  schema.sql
apps/japanese-tutor/src/japanese_agent/database/migrations/: 001_add_base64_to_screenshots.sql
apps/japanese-tutor/src/japanese_agent/nodes/: __init__.py  save_screenshot_db.py  screenshot_ui.py
apps/japanese-tutor/src/japanese_agent/state/: __init__.py  schemas.py
apps/japanese-tutor/src/japanese_agent/tools/: __init__.py  flashcard_manager.py  screenshot_analyzer.py  vocabulary_manager.py
apps/japanese-tutor/tests/: __init__.py  conftest.py
apps/japanese-tutor/tests/integration/: test_database_setup.py  test_flashcard_database.py  test_full_workflow.py  test_graph.py  test_vocabulary_database.py
apps/japanese-tutor/tests/unit/: test_image_preprocessing.py  test_screenshot_analyzer.py  test_state_schemas.py
apps/resume-agent-langgraph/: .env.example  .gitignore  BROWSER_AUTOMATION_QUICKREF.md  CLAUDE.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPORT_FIX.md  INTEGRATION_PLAN.md  README.md  SCRIPTS.md  STATE_INTEGRATION_COMPLETE.md  WORKING_PATTERN.md  __init__.py  fastapi_server.py  graph_registry.py  langgraph.json  pyproject.toml  resume_agent_langgraph.py  run_test.py  start-server.bat  start-server.sh  stop-server.bat  stop-server.sh  test_async_fix.py  test_cookpad_scraper.py  test_data_access.py  test_graph_invoke.py  test_message_format.py  test_request.json  test_tool_coroutine.py
apps/resume-agent-langgraph/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
apps/resume-agent-langgraph/docs/: CHANGELOG.md  CHECKPOINTING_RESEARCH.md  CLAUDE.md  INTEGRATION_PATTERNS.md  PROVIDERS.md  SCRIPTS.md  SUMMARY.md  WORKING_PATTERN.md  architecture-comparison.md  architecture-decisions.md  browser-automation-implementation.md  browser-tools-integration.md  checkpointing-plan.md  data-flow.md  database-schema.md  mcp-tools-inventory.md  phase-1-summary.md  state-schema.md  workflow-mapping.md
apps/resume-agent-langgraph/example/: ARCHITECTURE.md  SETUP.md  basic_usage.py  cli.py  main.py  requirements.txt
apps/resume-agent-langgraph/examples/: INTERVIEW_CHEAT_SHEET.md  PROJECT_SUMMARY.md  README.md  __init__.py  analyzer.py  ats_analyzer.py  basic_usage.py  basic_usage_alt.py  browser_agent_example.py  cli.py  config.py  job_scraper.py  langgraph_crash_course.ipynb  minimal_agent.py  optimizer.py  pyproject.toml  resume_parser_example.py  schemas.py  templates.py  test_graphs.py  test_nodes.py  test_tools.py  validator.py
apps/resume-agent-langgraph/scripts/: check_llm_provider.py  fix_checkpoint_tests.py  fix_integration_tests.py  generate_pdf_resume.py  generate_pdf_resume_reportlab.py  start-server.ps1  start_fastapi.ps1  stop-server.ps1
apps/resume-agent-langgraph/src/: cli.py
apps/resume-agent-langgraph/src/resume_agent/: __init__.py  config.py  graph.py
apps/resume-agent-langgraph/src/resume_agent/graphs/: EXAMPLE_SELF_CONTAINED_AGENT.py  __init__.py  career_assistant.py  conversation.py  cover_letter.py  job_analysis.py  resume_tailor.py
apps/resume-agent-langgraph/src/resume_agent/llm/: __init__.py  messages.py  providers.py
apps/resume-agent-langgraph/src/resume_agent/nodes/: __init__.py  conversation.py  cover_letter.py  job_analysis.py  resume_tailor.py
apps/resume-agent-langgraph/src/resume_agent/prompts/: __init__.py  templates.py
apps/resume-agent-langgraph/src/resume_agent/state/: __init__.py  schemas.py
apps/resume-agent-langgraph/src/resume_agent/tools/: __init__.py  ats_scorer.py  browser_automation.py  job_analyzer.py  resume_parser.py
apps/resume-agent-langgraph/tests/: PARALLEL_FIX_SUMMARY.md  README_E2E_TESTS.md  TEST_CLEANUP_ISSUES.md  conftest.py  test_agent.py  test_config.py  test_data_access.py  test_graph_invoke.py  test_job_analysis.py  test_job_analysis_e2e.py  test_llm_provider.py  test_modular_structure.py  test_nodes.py  test_resume_parser.py  test_resume_tailoring.py
apps/resume-agent-langgraph/tests/contract/: test_mcp_tools.py
apps/resume-agent-langgraph/tests/e2e/: test_agent.py
apps/resume-agent-langgraph/tests/integration/: TEST_CREATION_SUMMARY.md  test_job_analysis_workflow.py  test_langgraph_checkpointing.py  test_modular_structure.py  test_resume_tailoring.py  test_sqlite_dal.py
apps/resume-agent-langgraph/tests/unit/: test_browser_automation_structure.py  test_nodes.py  test_sqlite_schema.py  test_workflow_nodes.py
libs/cernji-logging-py/: README.md  pyproject.toml
libs/cernji-logging-py/src/cernji_logging/: __init__.py  config.py  context.py  timing.py
(+341 files in other folders)
